--- a/config/application.example.yml
+++ b/config/application.example.yml
@@ -23,3 +23,7 @@ DOMAIN_NAME: example.com
 ADMIN_NAME: First User
 ADMIN_EMAIL: user@example.com
 ADMIN_PASSWORD: changeme
+CONSUMER_KEY: "Go to https://apps.twitter.com/app/"
+CONSUMER_SECRET: "Go to https://apps.twitter.com/app/"
+YOUR_ACCESS_TOKEN: "Go to https://apps.twitter.com/app/"
+YOUR_ACCESS_SECRET: "Go to https://apps.twitter.com/app/"
